@@ -136,6 +136,33 @@ def maybeAuthenticate(lastResult):
 
         return request.POST(authenticationFormData)
 </script>
+<script title='HTTP digest authentication' id='digestauthentication'>
+# Basically delegates to HTTPClient's support for digest
+# authentication.
+#
+# Copyright (C) 2008 Matt Moran
+# Copyright (C) 2008 Philip Aston
+# Distributed under the terms of The Grinder license.
+
+from net.grinder.plugin.http import HTTPPluginControl
+from HTTPClient import AuthorizationInfo
+
+# Enable HTTPClient's authorisation module.
+HTTPPluginControl.getConnectionDefaults().useAuthorizationModule = 1
+
+test1 = Test(1, "Request resource")
+request1 = test1.wrap(HTTPRequest())
+
+class TestRunner:
+    def __call__(self):
+        threadContextObject = HTTPPluginControl.getThreadHTTPClientContext()
+
+        # Set the authorisation details for this worker thread.
+        AuthorizationInfo.addDigestAuthorization(
+            "www.my.com", 80, "myrealm", "myuserid", "mypw", threadContextObject)
+
+        result = request1.GET('http://www.my.com/resource')
+</script>
 <script title='HTTP cookies' id='cookies'>
 # HTTP example which shows how to access HTTP cookies.
 #
@@ -845,8 +872,6 @@ class TestRunner:
 
 </script>
 <script title='Email' id='email'>
-# Email
-#
 # Send email using Java Mail (http://java.sun.com/products/javamail/)
 #
 # This Grinder Jython script should only be used for legal email test
